--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,47 +1,43 @@
-# Scala CircleCI 2.0 configuration file
-#
-# Check https://circleci.com/docs/2.0/sample-config/ for more details
-#
 version: 2
 jobs:
   build:
+    working_directory: ~/my-project
     docker:
-      # specify the version you desire here
-      - image: circleci/openjdk:8-jdk
-
-      # Specify service dependencies here if necessary
-      # CircleCI maintains a library of pre-built images
-      # documented at https://circleci.com/docs/2.0/circleci-images/
-      # - image: circleci/postgres:9.4
-
-    working_directory: ~/repo
-
-    environment:
-      # Customize the JVM maximum heap limit
-      JVM_OPTS: -Xmx3200m
-      TERM: dumb
-
+      - image: codestar/circleci-scala-sbt-git:scala-2.12.2-sbt-0.13.15
     steps:
       - checkout
 
-      # Download and cache dependencies
       - restore_cache:
           keys:
-            - v1-dependencies-{{ checksum "build.sbt" }}
-            # fallback to using the latest cache if no exact match is found
-            - v1-dependencies-
+            - my-project-{{ checksum "project/build.sbt" }}-{{ checksum "build.sbt" }}
+            - my-project
 
-      - run: cat /dev/null | sbt test:compile
+      - run:
+          # TODO: For some reason circleci gets stuck in the shell if we don't add exit to sbt
+          command:
+            sbt compile test:compile exit
 
       - save_cache:
+          key: my-project-{{ checksum "project/build.sbt" }}-{{ checksum "build.sbt" }}
           paths:
+            - target/resolution-cache
+            - target/streams
+            - project/target/resolution-cache
+            - project/target/streams
+            - ~/.sbt
+            - ~/.iv2/cache
             - ~/.m2
-          key: v1-dependencies--{{ checksum "build.sbt" }}
+      - save_cache:
+          # Changing this to a different key is the only way to remove old dependencies from the cache and/or generate a more up-to-date cache
+          key: my-project
+          paths:
+            - ~/.sbt
+            - ~/.iv2/cache
+            - ~/.m2
 
-      # run tests!
-      - run: cat /dev/null | sbt test:test
-  workflows:
-    main:
-      jobs:
-        - build:
-            context: SonarCloud
+      - run:
+          command:
+            sbt test exit
+
+      - store_test_results:
+          path: target/test-reports
